// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core: object > 
    /**
     * Super hero Record.
     * @property {string} name - super hero name
     * @property {string} power - the hero ability
     * @property {method} attack - attack
     * @property {number} level - hero level
     */
    const superHero = {
      name: 'Batman',
      power: 'Super Rich',
      attack() {},
      level: 100,
    } 1`] = `
Array [
  Object {
    "file_id": "__TEST__",
    "jsdoc": Array [
      Object {
        "description": "Super hero Record.",
        "tags": Array [
          Object {
            "description": "super hero name",
            "name": "name",
            "title": "property",
            "type": Object {
              "name": "string",
              "type": "NameExpression",
            },
          },
          Object {
            "description": "the hero ability",
            "name": "power",
            "title": "property",
            "type": Object {
              "name": "string",
              "type": "NameExpression",
            },
          },
          Object {
            "description": "attack",
            "name": "attack",
            "title": "property",
            "type": Object {
              "name": "method",
              "type": "NameExpression",
            },
          },
          Object {
            "description": "hero level",
            "name": "level",
            "title": "property",
            "type": Object {
              "name": "number",
              "type": "NameExpression",
            },
          },
        ],
      },
    ],
    "object_id": "superHero",
  },
]
`;

exports[`Core: object > const foo = { bar: { name: "baz" }} 1`] = `
Array [
  Object {
    "file_id": "__TEST__",
    "jsdoc": undefined,
    "object_id": "foo",
  },
  Object {
    "file_id": "__TEST__",
    "jsdoc": undefined,
    "object_id": "bar",
  },
]
`;

exports[`Core: object > const foo = {} 1`] = `
Array [
  Object {
    "file_id": "__TEST__",
    "jsdoc": undefined,
    "object_id": "foo",
  },
]
`;

exports[`Core: object > const obj = {
      foo: bar,
      baz: bez,
      fn() { },
      thing: () => {},
      num: 100,
      numstr: "onehundred",
      dfn: function () {}
    } 1`] = `
Array [
  Object {
    "file_id": "__TEST__",
    "jsdoc": undefined,
    "object_id": "obj",
  },
]
`;
